--- a/Projects.html
+++ b/Projects.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Home</title>
+<title>Projects</title>
 <link href="Portfolio-main.css" rel="stylesheet" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
-<body id="viklh">
+<body id="Projects">
 	<div class="bgimage"></div>
 	<header class="clearfix">
 		<div class="logo">
