--- a/Help.html
+++ b/Help.html
@@ -16,8 +16,9 @@
 			<nav>
 				<ul class="nav">
 					<li>
+						<a href="Home_Page.html">Home</a>
 						<a href="Gallery.html">Gallery</a>
-						<a href="Collections.html">Collections</a>
+						<a href="Materials.html">aterials</a>
 						<a href="Projects.html">Projects</a>
 						<a href="Works_in_Progress.html">Works in Progress</a>
 						<a href="About.html">About</a>
