--- a/Home_Page.html
+++ b/Home_Page.html
@@ -10,22 +10,31 @@
 <body id="viklh">
 	<div class="bgimage"></div>
 	<header class="clearfix">
-		<div class="logo">
-			<div class="return-button">
-			<a href="index.html"><img src="images/flower.jpg" alt=""></a></div></div>
-			<nav>
-				<ul class="nav">
-					<li>
-						<a href="Gallery.html">Gallery</a>
-						<a href="Collections.html">Collections</a>
-						<a href="Projects.html">Projects</a>
-						<a href="Works_in_Progress.html">Works in Progress</a>
-						<a href="About.html">About</a>
-						<a href="Contact.html">Contact</a>
-						<a href="Help.html">Help</a>
-					</li>
-				</ul>
-			</nav>
+			<div class="logo">
+				<div class="return-buttonh">
+				<a href="index.html"><img src="images/flower.jpg" alt=""></a></div></div>
+				<div class="content clearfix">
+					<nav>
+						<ul class="nav">
+							<li>
+								<a href="Home_Page.html">Home</a>
+								<a href="Gallery.html">Gallery</a>
+								<a href="Materials.html">Materials</a>
+								<a href="Projects.html">Projects</a>
+								<a href="Works_in_Progress.html">Works in Progress</a>
+								<a href="About.html">About</a>
+								<a href="Contact.html">Contact</a>
+								<a href="Help.html">Help</a>
+							</li>
+						</ul>
+					</nav>
+				 <div class="center-column">
+			<h1> Mehh...</h1>
+			<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad minus explicabo iusto. Maxime, asperiores quaerat! Odit quisquam qui magnam iure reprehenderit maiores nam, asperiores repellat dolorem sit fugit quidem eius.</p>
+			<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aliquam quis dolores praesentium repellat beatae fugiat ad, et autem laborum consequatur dolorem maxime perferendis, odio odit similique nulla cupiditate dolor?</p>
+			<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, aliquid tenetur. Quis tempora quibusdam fugiat, accusantium repellat excepturi corporis? Nesciunt, culpa! Quis id dicta, saepe sapiente possimus impedit ut porro.</p>
+		  </div>
+		</div>
 	</header>
 
 </body>
